--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -23,3 +23,24 @@ jobs:
       run: npm run test:unit
     - name: Display SoftUni username
       run: echo 'playmannn'
+      
+  run_ui_tests:
+    needs: build_and_test
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout the repo
+      uses: actions/checkout@v4
+    - name: Use Node.js latest 20
+      uses: actions/setup-node@v4
+      with:
+        node-version: 20.x
+        cache: 'npm'
+    - name: Install npm dependencies
+      run: npm install
+    - name: Install Playwright browsers
+      run: npx playwright install
+    - name: Start the app
+      run: npm run start &
+    - name: Execute the ui tests
+      run: npm run test:ui
+      
